// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorites Container Test should match the snapshot when there are no favorites 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    favorites={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "favorites-container",
    },
    "ref": null,
    "rendered": Array [],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "favorites-container",
      },
      "ref": null,
      "rendered": Array [],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Favorites Container Test should match the snapshot when there is a user 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    favorites={
        Array [
            Object {
              "favorite": true,
              "title": "ConAir",
            },
          ]
    }
    users={
        Object {
            "id": 2,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div>
          <Link
                    replace={false}
                    to="/movies/ConAir"
          >
                    <div
                              className="favorite-card"
                              style={
                                        Object {
                                                  "backgroundImage": "url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/undefined)",
                                                }
                              }
                    />
          </Link>
          <button
                    onClick={[Function]}
          >
                    Unfavorite
          </button>
</div>,
      ],
      "className": "favorites-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link
              replace={false}
              to="/movies/ConAir"
>
              <div
                            className="favorite-card"
                            style={
                                          Object {
                                                        "backgroundImage": "url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/undefined)",
                                                      }
                            }
              />
</Link>,
            <button
              onClick={[Function]}
>
              Unfavorite
</button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <div
                className="favorite-card"
                style={
                                Object {
                                                "backgroundImage": "url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/undefined)",
                                              }
                }
/>,
              "replace": false,
              "to": "/movies/ConAir",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": "0 + ConAir",
              "nodeType": "host",
              "props": Object {
                "className": "favorite-card",
                "style": Object {
                  "backgroundImage": "url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/undefined)",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Unfavorite",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Unfavorite",
            "type": "button",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div>
            <Link
                        replace={false}
                        to="/movies/ConAir"
            >
                        <div
                                    className="favorite-card"
                                    style={
                                                Object {
                                                            "backgroundImage": "url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/undefined)",
                                                          }
                                    }
                        />
            </Link>
            <button
                        onClick={[Function]}
            >
                        Unfavorite
            </button>
</div>,
        ],
        "className": "favorites-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Link
                replace={false}
                to="/movies/ConAir"
>
                <div
                                className="favorite-card"
                                style={
                                                Object {
                                                                "backgroundImage": "url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/undefined)",
                                                              }
                                }
                />
</Link>,
              <button
                onClick={[Function]}
>
                Unfavorite
</button>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <div
                  className="favorite-card"
                  style={
                                    Object {
                                                      "backgroundImage": "url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/undefined)",
                                                    }
                  }
/>,
                "replace": false,
                "to": "/movies/ConAir",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": "0 + ConAir",
                "nodeType": "host",
                "props": Object {
                  "className": "favorite-card",
                  "style": Object {
                    "backgroundImage": "url(https://image.tmdb.org/t/p/w600_and_h900_bestv2/undefined)",
                  },
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Unfavorite",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Unfavorite",
              "type": "button",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Favorites Container Test should match the snapshot when there is no user 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    favorites={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "favorites-container",
    },
    "ref": null,
    "rendered": Array [],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "favorites-container",
      },
      "ref": null,
      "rendered": Array [],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Favorites Container Test should match the snapshot when there is no user and no 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    favorites={Array []}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
      "className": "favorites-container",
    },
    "ref": null,
    "rendered": Array [],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
        "className": "favorites-container",
      },
      "ref": null,
      "rendered": Array [],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
